adding to twitter bookrmarks

--- a/pages/code/twitterBookmarks.html
+++ b/pages/code/twitterBookmarks.html
@@ -41,7 +41,6 @@
             <div class="col-lg-12 col-md-12 mb-12 mb-md-0 page-header">
                 <img class="doglogo" src="../../assets/dogLOGO.png" alt="logo">
                 <h3>Storing my twitter bookmarks with react</h3>
-                <h4>The live site can be seen <a href="https://mybookmarksbylinh.netlify.app/">here</a></h4>
             </div>
         </div>
         <!--end of intro-->
@@ -50,15 +49,28 @@
         <div id="project-desc" class="container p-2 ">
             <div id="project-desc-intro" class="row">
                 <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
-
+                    <p>
+                        Twitter doesn’t have an existing method to categorize bookmarked links
+                        and tweets, and mamy users like myself have an unholy amount of content
+                        saved into those bookmarks. As an excuse to practice using Material UI
+                        with the javascript library ReactJS, I decided to make my own way to store
+                        all those links. The result can be seen 
+                        <a href="https://mybookmarksbylinh.netlify.app/">here</a>.
+                    </p>
                 </div>
-
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <img class="img-thumbnail" src="../../assets/twitter-bookmarks.jpg" alt="twitter bookmarks">
+                </div>
             </div>
             <!--end of row-->
 
             <div id="project-desc-block" class="row">
-                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
-                    
+                <div class="col-lg-12 col-md-12 mb-12 mb-md-0">
+                    <p>
+                        The component from Material UI used was a drawer. I thought it would be a good way to compartmentalize information.
+                        Styling was a challenge because I was trying to figure out if custom classes would be easier or not compared to using
+                        something like Bootstrap. I ended up going with custom classes, so I need to work on my CSS more.
+                    </p>
                 </div>
             </div>
         </div>
