added to church website

--- a/pages/code/churchWebsite.html
+++ b/pages/code/churchWebsite.html
@@ -39,22 +39,78 @@
         <!--intro-->
         <div class="row " id="introcontent">
             <div class="col-lg-12 col-md-12 mb-12 mb-md-0 page-header">
-                <img class="doglogo" src="./assets/dogLOGO.png" alt="logo">
-                <h3>Header</h3>
-                <h4>...</h4>
+                <img class="doglogo" src="../../assets/dogLOGO.png" alt="logo">
+                <h3>Church Website</h3>
+                <h4>This is a fictional church. The website is based on existing websites of religious institutions.</h4>
             </div>
         </div>
         <!--end of intro-->
 
         <!--project desc-->
-        <div class="container p-2 ">
-            <div class="row">
-                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
-
+        <div id="project-desc" class="container p-2 ">
+            <div id="project-desc-intro" class="row">
+                <div class="col-lg-12 col-md-12 mb-12 mb-md-0">
+                    <!-- <img class="img-responsive" src="../../assets/church-website.jpg" alt="fictional church website"> -->
+                    <iframe class="iframe-prev" src="https://vilinh27.github.io/churchwebsite/" title="fictional church website"></iframe>
+                    <p style="text-align:center;">
+                        Here is a preview of what the live site looks like. Visit 
+                        <a href="https://vilinh27.github.io/churchwebsite/">
+                           here 
+                        </a>
+                         to see more of it.
+                    </p>
                 </div>
-
             </div>
-            <!--end of project desc-->
+
+            <div id="project-desc-block" class="row">
+                <div class="col-lg-12 col-md-12 mb-12 mb-md-0">
+                    <p>
+                        I wanted to make a simple website based on a fictional organization as a sort of ongoing starter project for the purpose
+                        of learning frontend web development. This is purely for educational purposes, but I didn’t want to use an existing church’s 
+                        websiten to redesign, so I used a fictional one from a story I’m working on. I hadn’t touched any markup language in years so 
+                        the organization of the code is ist still pretty haphazard.
+                    </p>
+                </div>
+            </div>
+
+            <div id="project-desc-block" class="row">
+                <div class="col-lg-12 col-md-12 mb-12 mb-md-0">
+                    <p>
+                        Concerning the design and information architectuer of the website, I heavily based this site off existing churches’
+                        websites.
+                        One was Our Lady of Gudalupe in Helotes Texas. The site can be visited <a href="https://olghelotes.org/">here</a>
+                        and is previewed below.
+                    </p>
+                    <iframe class="iframe-prev" src="https://olghelotes.org/" title="Our lady of Gudalupe Helotes"></iframe>
+                    <p>
+                        The other was Our Lady of Atonement (also in Helotes Texas). Ths site can be visited <a
+                            href="https://ourladyoftheatonement.org/">here</a> and is previewed below.
+                    </p>
+                    <iframe class="iframe-prev" src="https://ourladyoftheatonement.org/" title="Our Lady of Atonement"></iframe>
+                    <p>
+                        This is a continuous work in progress project technically but I have the basic sketletons of the main home page. There are flaws
+                        that need to be fixed like responsiveness, but this was a good chance to get back into web development after several years of not
+                        touching it.
+                    </p>
+                </div>
+            </div>
+
+            <div id="project-desc-block" class="row">
+                <div class="col-lg-12 col-md-12 mb-12 mb-md-0">
+                    <p>
+                        Some of these screens are still bare-bones and links don't all work,
+                        because I have a questionable habit of working
+                        on several projects at once. 
+                    </p>
+                </div><!-- 
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <img class="img-responsive" src="" alt="screen 1">
+                    <img class="img-responsive" src="" alt="screen 2">
+                    <img class="img-responsive" src="" alt="screen 3">
+                </div> -->
+            </div>
+        </div>
+        <!--end of project desc-->
     </main>
     <!--end of main container-->
 
