adding skeletons to more individual project pages

--- a/pages/code/storyPlanner.html
+++ b/pages/code/storyPlanner.html
@@ -39,21 +39,45 @@
         <!--intro-->
         <div class="row " id="introcontent">
             <div class="col-lg-12 col-md-12 mb-12 mb-md-0 page-header">
-                <img class="doglogo" src="./assets/dogLOGO.png" alt="logo">
-                <h3>Header</h3>
-                <h4>...</h4>
+                <img class="doglogo" src="../../assets/dogLOGO.png" alt="logo">
+                <h3>StoryPlanner Site</h3>
+                <h4>This is a another forray into web development after years of not touching it.
+                    Technically done, but will be continously improved over time.
+                </h4>
             </div>
         </div>
         <!--end of intro-->
 
         <!--project desc-->
-        <div class="container p-2 ">
-            <div class="row">
-                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+        <div id="project-desc" class="container p-2 ">
+            <div class="row " id="introcontent">
+                <div class="col-lg-12 col-md-12 mb-12 mb-md-0 page-header">
+                    <iframe class="iframe-prev" src="https://vilinh27.github.io/myStoryPlanner/" title="story planner site"></iframe>
+                    <p style="text-align:center;">
+                        Above is a preview of the story planner site.
+                    </p>
+                </div>
+            </div>
 
+            <div class="row" id="project-desc-intro">
+                <div class="col-lg-12 col-md-12 mb-12 mb-md-0">
+                    <p>
+                        An old habit I had growing up, reading an irresponsible amount of comics, was making stories
+                        that would play out in my head when I zoned out. The complete live site can be viewed
+                        <a href="https://vilinh27.github.io/myStoryPlanner/">here</a>.
+                    </p>
                 </div>
 
             </div>
+
+            <div id="project-desc-block" class="row">
+                <div class="col-lg-12 col-md-12 mb-12 mb-md-0">
+                    <h4>The process</h4>
+                    <h5>Planning the pages out</h5>
+                    <h5>Reference</h5>
+                </div>
+            </div>
+
             <!--end of project desc-->
     </main>
     <!--end of main container-->
