--- a/projects.html
+++ b/projects.html
@@ -52,6 +52,7 @@
             <!--intro-->
             <div class="row text-center">
                 <div class="col-lg-12 page-header">
+                    <img class="doglogo" src="./assets/dogLOGO.png" alt="logo">
                     <h3>Here's some stuff I worked on. <br/>
                         Scroll down to see more or click one of the subnav tabs above.</h3>
                 </div>
