adding info to individual proj pages

--- a/pages/code/timeToTalk.html
+++ b/pages/code/timeToTalk.html
@@ -47,13 +47,19 @@
         <!--end of intro-->
 
         <!--project desc-->
-        <div class="container p-2 ">
-            <div class="row">
+        <div id="project-desc" class="container p-2 ">
+            <div class="row " id="introcontent">
                 <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
-
+                    <img src="" alt="" class="img-thumbnail">
                 </div>
-
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <p class="ind-proj-text">
+                       
+                    </p>
+                </div>
             </div>
+        
+        </div>
             <!--end of project desc-->
     </main>
     <!--end of main container-->
