--- a/pages/code/hellGhost.html
+++ b/pages/code/hellGhost.html
@@ -39,21 +39,56 @@
         <!--intro-->
         <div class="row " id="introcontent">
             <div class="col-lg-12 col-md-12 mb-12 mb-md-0 page-header">
-                <img class="doglogo" src="./assets/dogLOGO.png" alt="logo">
-                <h3>Header</h3>
-                <h4>...</h4>
+                <img class="doglogo" src="../../assets/dogLOGO.png" alt="logo">
+                <h3>HellGhost</h3>
+                <h4>A simple endless runner made in Unity</h4>
             </div>
         </div>
         <!--end of intro-->
 
         <!--project desc-->
-        <div class="container p-2 ">
-            <div class="row">
+        <div id="project-desc" class="container p-2 ">
+            <div class="row " id="introcontent">
                 <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <img src="../../assets/ghost01.JPG" alt="hell ghost thumbnail preview" class="img-thumbnail">
+                </div>
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <p class="ind-proj-text">
+                        I learned a bit of C# in high school and undergrad in some intro 
+                        programming classes. It's a good starting language because it has
+                        the structure of most Object Oriented languages while having syntax
+                        that's easy enough to understand. Unity was a complex game engine 
+                        that I did not have much exposure to, but I saw that you could 2D
+                        games, which seemed more accessible to me. Thanks to searching
+                        through several youtube tutorials, I found a good one that went
+                        through the steps quite well. You can find the channel
+                        <a href="https://www.youtube.com/c/Blackthornprod">here</a>.
+                    </p>
+                    <p class="ind-proj-text">
+                        Blackthornprod, the channel I used for youtube reference for this game
+                        even has a full playlist to show you how to make an endless runner game
+                        that can be visited 
+                        <a href="https://www.youtube.com/playlist?list=PLBIb_auVtBwBkYGKni2wKHGVFP5b4pVwj">here</a>.
+                    </p>
+
+                    <p class="ind-proj-text">
+                        The assets were made in photoshop. If interested in playing the game or seeing
+                        more details, my itchio page features it. It can be visited
+                        <a href="https://linh-is-tibia.itch.io/hellghost">
+                            here
+                        </a>.
+                    </p>
+                </div>
+            </div>
+
+            <!-- <div id="project-desc-block" class="row">
+                <div class="col-lg-12 col-md-12 mb-12 mb-md-0">
+                    <h4>Assets</h4>
 
                 </div>
+            </div> -->
 
-            </div>
+        </div>
             <!--end of project desc-->
     </main>
     <!--end of main container-->
