--- a/pages/code/timeToTalk.html
+++ b/pages/code/timeToTalk.html
@@ -1,4 +1,20 @@
-<!--# ViLinh27.github.io-->
+<!--
+
+<div id="project-desc" class="container p-2 ">
+    <div class="row " id="introcontent">
+        <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+            <img src="" alt="" class="img-thumbnail">
+        </div>
+        <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+            <p class="ind-proj-text">
+                
+            </p>
+        </div>
+    </div>
+        
+</div>
+
+-->
 <!--For my portfolio site.-->
 <!DOCTYPE html>
 <html>
@@ -39,9 +55,9 @@
         <!--intro-->
         <div class="row " id="introcontent">
             <div class="col-lg-12 col-md-12 mb-12 mb-md-0 page-header">
-                <img class="doglogo" src="./assets/dogLOGO.png" alt="logo">
-                <h3>Header</h3>
-                <h4>...</h4>
+                <img class="doglogo" src="../../assets/dogLOGO.png" alt="logo">
+                <h3>Time to Talk</h3>
+                <h4>A short visual novel made in the Renpy game engine.</h4>
             </div>
         </div>
         <!--end of intro-->
@@ -50,7 +66,7 @@
         <div id="project-desc" class="container p-2 ">
             <div class="row " id="introcontent">
                 <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
-                    <img src="" alt="" class="img-thumbnail">
+                    <img src="../../assets/timeToTalk-itchioCoverArtboard-1.png" alt="time to talk" class="img-thumbnail">
                 </div>
                 <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
                     <p class="ind-proj-text">
