add more blurbs

--- a/pages/code/timeToTalk.html
+++ b/pages/code/timeToTalk.html
@@ -77,7 +77,8 @@
                     
                     </p>
                     <p class="ind-proj-text">
-                    
+                        More details and a downloadable version of the game can be seen on my itchio page 
+                        <a href="https://linh-is-tibia.itch.io/time-to-talk">here</a>.
                     </p>
                 </div>
             </div>
