add to cartridge collector among other minor adjustments

--- a/pages/code/cartridgeCollector.html
+++ b/pages/code/cartridgeCollector.html
@@ -39,21 +39,35 @@
         <!--intro-->
         <div class="row " id="introcontent">
             <div class="col-lg-12 col-md-12 mb-12 mb-md-0 page-header">
-                <img class="doglogo" src="./assets/dogLOGO.png" alt="logo">
-                <h3>Header</h3>
-                <h4>...</h4>
+                <img class="doglogo" src="../../assets/dogLOGO.png" alt="logo">
+                <h3>Cartridge Collector</h3>
+                <h4>A Simple Platformer for a game jam</h4>
             </div>
         </div>
         <!--end of intro-->
 
         <!--project desc-->
-        <div class="container p-2 ">
-            <div class="row">
-                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
-
+        <div id="project-desc" class="container p-2 ">
+            <div class="row " id="introcontent">
+                <div class="col-lg-12 col-md-12 mb-12 mb-md-0">
+                    I was getting used to a little more of how Unity works with making 2D games thanks
+                    to the video tutorials on Blackthornprod's channel, and my sister recommended a casual
+                    game jam to join. This game is the result.
                 </div>
 
             </div>
+
+            <div id="project-desc-block" class="row">
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <img src="../../assets/cartridgecollector.jpg" alt="Cartridge Collector preview" class="img-thumbnail">
+                </div>
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <p class="ind-proj-text">
+                        
+                    </p>
+                </div>
+            </div>
+        </div>
             <!--end of project desc-->
     </main>
     <!--end of main container-->
