--- a/projects.html
+++ b/projects.html
@@ -53,8 +53,10 @@
             <div class="row text-center">
                 <div class="col-lg-12 page-header">
                     <img class="doglogo" src="./assets/dogLOGO.png" alt="logo">
-                    <h3>Here's some stuff I worked on. <br/>
-                        Scroll down to see more or click one of the subnav tabs above.</h3>
+                    <h3>
+                        Here's some stuff I worked on.
+                    </h3>
+                    <h4>Scroll down to see more or click one of the subnav tabs above.</h4>
                 </div>
             </div>
             <!--end of intro-->
