adding more project pages

--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
         <!--end of row-->
       </div>
       <!--end of project grid-->
+      <h5>Visit the Projects tab for more of my work.</h5>
     </main><!--end of main container-->
 
     <!--footer-->
