--- a/pages/code/cartridgeCollector.html
+++ b/pages/code/cartridgeCollector.html
@@ -63,7 +63,18 @@
                 </div>
                 <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
                     <p class="ind-proj-text">
-                        
+                        This game was made for a game jam on itch.io called
+                        "A Game By its Cover 2020 game jam". I thought it was
+                        a good way to get my feet wet and it was non competitive
+                        which worked out because I'm still too nervous at those kinds
+                        of events (even if online).
+                    </p>
+                    <p class="ind-proj-text">
+                        The downloadable version of the game can be
+                        found <a href="https://linh-is-tibia.itch.io/cartridge-collector">
+                            here
+                        </a>
+                         on my itch.io.
                     </p>
                 </div>
             </div>
