--- a/about.html
+++ b/about.html
@@ -38,6 +38,7 @@
     <main class="container p-1" id="mainhome">
         <!--about me-->
         <div id="meblurb" class="row text-center">
+            <h3>About Me</h3>
             <!--me pic-->
             <div class="col-lg-12 col-md-12">
                 <img class="media" src="./assets/mepic.jpg" alt="Me picture"/>
