add link to card clone page

--- a/pages/code/carrdClone.html
+++ b/pages/code/carrdClone.html
@@ -64,7 +64,11 @@
                 </div>
                 <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
                     <p class="ind-proj-text">
-                       
+                       The code can be viewed on my codepen.io page 
+                       <a href="https://codepen.io/vilinh27/pen/QWvJEop">
+                           here
+                       </a>
+                       .
                     </p>
                 </div>
             </div>
