switch out featured project

--- a/index.html
+++ b/index.html
@@ -102,6 +102,15 @@
 
           <!--project 6-->
           <div id="project-grid-item" class="col-lg-6 col-md-6 mb-12 mb-md-0">
+            <a href="./pages/code/storyPlanner.html">
+              <img class="project-grid-item-img" src="./assets/storyplanner.jpg" alt="StoryPlanner Site" />
+              <div class="overlay">
+                <div class="overlay-text">StoryPlanner Site</div>
+              </div>
+            </a>
+          
+          </div>
+          <!-- <div id="project-grid-item" class="col-lg-6 col-md-6 mb-12 mb-md-0">
             <a href="./pages/code/iosBookTrackerApp.html">
               <img class="project-grid-item-img" src="" alt="IOS BOOKTRACKER APP">
               <div class="overlay">
@@ -109,7 +118,7 @@
               </div>
             </a>
             
-          </div>
+          </div> -->
         </div>
         <!--end of row-->
       </div>
