add to fan art page

--- a/pages/misc/fanArt.html
+++ b/pages/misc/fanArt.html
@@ -40,20 +40,173 @@
         <div class="row " id="introcontent">
             <div class="col-lg-12 col-md-12 mb-12 mb-md-0 page-header">
                 <img class="doglogo" src="./assets/dogLOGO.png" alt="logo">
-                <h3>Header</h3>
-                <h4>...</h4>
+                <h3>Fan Art</h3>
+                <h4>Paying tribute to enjoyable pop culture.</h4>
             </div>
         </div>
         <!--end of intro-->
 
         <!--project desc-->
-        <div class="container p-2 ">
-            <div class="row">
-                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
-
+        <div id="project-desc" class="container p-2 ">
+            <div class="row " id="introcontent">
+                <div class="col-lg-12 col-md-12 mb-12 mb-md-0">
+                    I'm a huge nerd. I enjoy pop culture like movies and comics (mostly webtoons though),
+                    so it's fun trying to make tributes to those things I love and make them my own in
+                    some way. Here are some of those instances.
                 </div>
-
             </div>
+
+            <h5>Webtoons</h5>
+            <div id="project-desc-block" class="row">
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <img src="../../assets/art/fanart/theuden-webtoon.jpg" alt="theuden 1" class="img-thumbnail">
+                </div>
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <p></p>
+                </div>
+            </div>
+            <div id="project-desc-block" class="row">
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <img src="../../assets/art/fanart/theuden2-webtoon.jpg" alt="theuden 2" class="img-thumbnail">
+                </div>
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <p></p>
+                </div>
+            </div>
+            <div id="project-desc-block" class="row">
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <img src="../../assets/art/fanart/theuden3-webtoon.jpg" alt="theuden 3" class="img-thumbnail">
+                </div>
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <p></p>
+                </div>
+            </div>
+            <div id="project-desc-block" class="row">
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <img src="../../assets/art/fanart/theuden4-webtoon.jpg" alt="theuden 4" class="img-thumbnail">
+                </div>
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <p></p>
+                </div>
+            </div>
+            <div id="project-desc-block" class="row">
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <img src="../../assets/art/fanart/isran-webtoon.jpg" alt="isran 1" class="img-thumbnail">
+                </div>
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                </div>
+            </div>
+            <div id="project-desc-block" class="row">
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <img src="../../assets/art/fanart/isran2-webtoon.jpg" alt="isran 2" class="img-thumbnail">
+                </div>
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                </div>
+            </div>
+            <div id="project-desc-block" class="row">
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <img src="../../assets/art/fanart/aro-webtoon.jpg" alt="aro in animal crossing" class="img-thumbnail">
+                </div>
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                </div>
+            </div>
+            <div id="project-desc-block" class="row">
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <img src="../../assets/art/fanart/alex-webtoon.jpg" alt="alex the great" class="img-thumbnail">
+                </div>
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                </div>
+            </div>
+            <div id="project-desc-block" class="row">
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <img src="../../assets/art/fanart/rand-webtoon.jpg" alt="rand hirahara" class="img-thumbnail">
+                </div>
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                </div>
+            </div>
+
+            <h5>TV / Movies</h5>
+            <div id="project-desc-block" class="row">
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <img src="../../assets/art/fanart/toph-desert.jpg" alt="toph" class="img-thumbnail">
+                </div>
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <p></p>
+                </div>
+            </div>
+            <div id="project-desc-block" class="row">
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <img src="../../assets/art/fanart/ruby-fanart.jpg" alt="ruby 1" class="img-thumbnail">
+                </div>
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                </div>
+            </div>
+            <div id="project-desc-block" class="row">
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <img src="../../assets/art/fanart/ruby2-fanart.jpg" alt="ruby 2" class="img-thumbnail">
+                </div>
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                </div>
+            </div>
+            <div id="project-desc-block" class="row">
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <img src="../../assets/art/fanart/ruby3-fanart.jpg" alt="ruby 3" class="img-thumbnail">
+                </div>
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                </div>
+            </div>
+            <div id="project-desc-block" class="row">
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <img src="../../assets/art/fanart/luca-selfportrait.jpg" alt="me if I was a fish monster" class="img-thumbnail">
+                </div>
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                </div>
+            </div>
+            <div id="project-desc-block" class="row">
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <img src="../../assets/art/fanart/thefoolcard.png" alt="the fool card owl house" class="img-thumbnail">
+                </div>
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                </div>
+            </div>
+            <div id="project-desc-block" class="row">
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <img src="../../assets/art/fanart/ME-butSHOW.png" alt="me but different shows" class="img-thumbnail">
+                </div>
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                </div>
+            </div>
+            <div id="project-desc-block" class="row">
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <img src="../../assets/art/fanart/oscar-isaac.png" alt="oscar isaac from moonknight" class="img-thumbnail">
+                </div>
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                </div>
+            </div>
+            <h5>Draw this in your own style Challenges</h5>
+            <div id="project-desc-block" class="row">
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <img src="../../assets/art/fanart/oshunredraw2.png" alt="oshun redraw" class="img-thumbnail">
+                </div>
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                </div>
+            </div>
+            <div id="project-desc-block" class="row">
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <img src="../../assets/art/fanart/cyarine-dtiys.png" alt="cyarine dtiys" class="img-thumbnail">
+                </div>
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                </div>
+            </div>
+            <div id="project-desc-block" class="row">
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <img src="../../assets/art/fanart/jorioux-dtiys.png" alt="jorioux dtiys" class="img-thumbnail">
+                </div>
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                </div>
+            </div>
+
+        </div>
             <!--end of project desc-->
     </main>
     <!--end of main container-->
