try to add sass

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   
     <!--custom css-->
     <link rel="stylesheet" type="text/css" href="./styling/styles.css">
+    <!-- <link rel="stylesheet" type="text/css" href="./styling/styles.scss"> -->
   </head>
   <body class="d-flex flex-column min-vh-100">
     <nav class="navbar navbar-default">
@@ -38,8 +39,32 @@
       <div class="row " id="introcontent">
         <div class="col-lg-12 col-md-12 mb-12 mb-md-0 page-header">
           <img class="doglogo" src="./assets/dogLOGO.png" alt="logo">
-          <h3>Hello!</h3>
-          <h4>I do code and art stuff</h4>
+          <h3 class="home-intro">Hello! I can...</h3>
+
+          <div class="animcontent">
+            <div class="animcontent__container">
+              <ul class="animcontent__container__list">
+                <li class="animcontent__container__list__item">
+                  code!
+                </li>
+                <li class="animcontent__container__list__item">
+                  draw!
+                </li>
+                <li class="animcontent__container__list__item">
+                  design!
+                </li>
+                <li class="animcontent__container__list__item">
+                  UX research!
+                </li>
+                <li class="animcontent__container__list__item">
+                  3D model!
+                </li>
+              </ul>
+            </div>
+            <!--end of animcontent__container-->
+          </div>
+          <!--endo of animcontent-->
+
           <h5>Scroll Down to see some featured projects</h5>
         </div>
       </div>
