fix index page animation

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <!--intro-->
       <div class="row " id="introcontent">
         <div class="col-lg-12 col-md-12 mb-12 mb-md-0 page-header">
-          <img class="doglogo" src="./assets/dogLOGO.png" alt="logo">
+          <img id="dog" class="doglogo" src="./assets/dogLOGO.png" alt="logo">
           <div class="main-intro">
             <h3 class="home-intro">Hello! I can...</h3>
             
@@ -65,11 +65,13 @@
               <!--end of animcontent__container-->
             </div>
             <!--endo of animcontent-->
-          </div>
-          <!--main intro-->
 
-          <h5>Scroll Down to see some featured projects</h5>
-        </div>
+            <h5 class="home-intro-subtitle">
+              Scroll Down to see some featured projects
+            </h5>
+          </div><!--main intro-->
+
+        </div><!--column-->
       </div>
       <!--end of intro-->
 
