--- a/pages/code/portfolioOverhaul.html
+++ b/pages/code/portfolioOverhaul.html
@@ -122,6 +122,27 @@
 
         </div>
         <!--end of project desc-->
+
+        <div>
+            <h4>References</h4>
+            <p class="ind-proj-text">
+                Codepen.io provided some awesome ways to approach text animations to add more pizzazz
+                to this portfolio website. Plus I've learned that a little more interactivity like 
+                these text animations can help make the site look a little more professional.
+            </p>
+            <p class="ind-proj-text">
+                The translation animation on the homepage header is thanks to this original project
+                by Yoann Helin:
+                <a href="https://codepen.io/yoannhel/pen/DMzjog">
+                    here
+                </a>
+                . My version can be seen here where I fiddled with it:
+                <a href="https://codepen.io/vilinh27/pen/vYdMYgR">
+                    here
+                </a>
+                .
+            </p>
+        </div>
     </main>
     <!--end of main container-->
 
@@ -153,10 +174,10 @@
                 <div class="col-lg-4 col-md-4 mb-4 mb-md-0">
                     <h4>Follow Me</h4>
                     <a href="https://www.linkedin.com/in/vilinhnguyen27/"><img class="icons"
-                            src="./assets/linkedin-icon.png" alt="linkedin" /></a>
-                    <a href="https://twitter.com/vilinh27"><img class="icons" src="./assets/twitter-icon.png"
+                            src="../../assets/linkedin-icon.png" alt="linkedin" /></a>
+                    <a href="https://twitter.com/vilinh27"><img class="icons" src="../../assets/twitter-icon.png"
                             alt="twitter" /></a>
-                    <a href="https://www.instagram.com/linh_is_tibia/"><img class="icons" src="./assets/insta-icon.png"
+                    <a href="https://www.instagram.com/linh_is_tibia/"><img class="icons" src="../../assets/insta-icon.png"
                             alt="instagram" /></a>
                 </div>
             </div>
