add to char art page

--- a/pages/misc/charArt.html
+++ b/pages/misc/charArt.html
@@ -39,21 +39,53 @@
         <!--intro-->
         <div class="row " id="introcontent">
             <div class="col-lg-12 col-md-12 mb-12 mb-md-0 page-header">
-                <img class="doglogo" src="./assets/dogLOGO.png" alt="logo">
-                <h3>Header</h3>
-                <h4>...</h4>
+                <img class="doglogo" src="../../assets/dogLOGO.png" alt="logo">
+                <h3>Character Art</h3>
+                <h4>It's crowded inside my head...</h4>
             </div>
         </div>
         <!--end of intro-->
 
         <!--project desc-->
-        <div class="container p-2 ">
-            <div class="row">
-                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
-
+        <div id="project-desc" class="container p-2 ">
+            <div class="row " id="introcontent">
+                <div class="col-lg-12 col-md-12 mb-12 mb-md-0">
+                    <p>I enjoy making up characters and figuring out their inner lives when
+                        I'm absent-mindedly creating stories, so character art has always been a good outlet
+                        to visualize them. I'm still trying to figure out what kind of character art appeals
+                        to me most. There's model sheets, expression sheets, illustrations and so much more out
+                        there. I'll stick what I have here for now.
+                    </p>
                 </div>
-
             </div>
+        </div>
+        <div id="project-desc-block" class="row">
+            <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                <img src="../../assets/marlowe.jpg" alt="marlowe" class="img-thumbnail">
+            </div>
+            <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                <p class="ind-proj-text">
+                    Marlowe
+                </p>
+            </div>
+        </div>
+        <div id="project-desc-block" class="row">
+            <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                <img src="../../assets/art/edith.jpg" alt="Edith" class="img-thumbnail">
+            </div>
+            <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                <p class="ind-proj-text">
+                    Edith Kraus
+                </p>
+            </div>
+        </div>
+        <div id="project-desc-block" class="row">
+            <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                <img src="" alt="" class="img-thumbnail">
+            </div>
+            <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+            </div>
+        </div>
             <!--end of project desc-->
     </main>
     <!--end of main container-->
@@ -86,10 +118,10 @@
                 <div class="col-lg-4 col-md-4 mb-4 mb-md-0">
                     <h4>Follow Me</h4>
                     <a href="https://www.linkedin.com/in/vilinhnguyen27/"><img class="icons"
-                            src="./assets/linkedin-icon.png" alt="linkedin" /></a>
-                    <a href="https://twitter.com/vilinh27"><img class="icons" src="./assets/twitter-icon.png"
+                            src="../../assets/linkedin-icon.png" alt="linkedin" /></a>
+                    <a href="https://twitter.com/vilinh27"><img class="icons" src="../../assets/twitter-icon.png"
                             alt="twitter" /></a>
-                    <a href="https://www.instagram.com/linh_is_tibia/"><img class="icons" src="./assets/insta-icon.png"
+                    <a href="https://www.instagram.com/linh_is_tibia/"><img class="icons" src="../../assets/insta-icon.png"
                             alt="instagram" /></a>
                 </div>
             </div>
