adding to zbrush page and Under Construction to other pages

--- a/pages/misc/threeDSculpts.html
+++ b/pages/misc/threeDSculpts.html
@@ -39,21 +39,92 @@
         <!--intro-->
         <div class="row " id="introcontent">
             <div class="col-lg-12 col-md-12 mb-12 mb-md-0 page-header">
-                <img class="doglogo" src="./assets/dogLOGO.png" alt="logo">
-                <h3>Header</h3>
-                <h4>...</h4>
+                <img class="doglogo" src="../../assets/dogLOGO.png" alt="logo">
+                <h3>Digital Sculpting</h3>
+                <h4>Sculpting in the digital space</h4>
             </div>
         </div>
         <!--end of intro-->
 
         <!--project desc-->
-        <div class="container p-2 ">
-            <div class="row">
-                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
-
+        <div id="project-desc" class="container p-2 ">
+            <div class="row " id="introcontent">
+                <div class="col-lg-12 col-md-12 mb-12 mb-md-0">
+                    <p >
+                        I was unaware of digital sculpting as a medium in 3d animation and modeling before
+                        taking a class in undergrad. Sculpting was never my strong suit but it was an 
+                        interesting learning process that I will keep with me through my artistic exploration.
+                    </p>
                 </div>
-
             </div>
+
+            <div id="project-desc-block" class="row">
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <img src="../../assets/art/3dwork/skull1.jpg" alt="skull side" class="img-thumbnail">
+                </div>
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <p class="ind-proj-text">
+                        skull
+                    </p>
+                </div>
+            </div>
+
+            <div id="project-desc-block" class="row">
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <img src="../../assets/art/3dwork/skull2.jpg" alt="skull front" class="img-thumbnail">
+                </div>
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <p class="ind-proj-text">
+                        
+                    </p>
+                </div>
+            </div>
+
+            <div id="project-desc-block" class="row">
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <img src="../../assets/art/3dwork/skull3.jpg" alt="skull 3/4" class="img-thumbnail">
+                </div>
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <p class="ind-proj-text">
+                        
+                    </p>
+                </div>
+            </div>
+
+            <div id="project-desc-block" class="row">
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <img src="../../assets/art/3dwork/maletorso1.jpg" alt="male torso front" class="img-thumbnail">
+                </div>
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <p class="ind-proj-text">
+                    </p>
+                </div>
+            </div>
+
+            <div id="project-desc-block" class="row">
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <img src="../../assets/art/3dwork/maletorso2.jpg" alt="male torso back" class="img-thumbnail">
+                </div>
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                </div>
+            </div>
+
+            <div id="project-desc-block" class="row">
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <img src="../../assets/art/3dwork/maletorso3.jpg" alt="male torso side" class="img-thumbnail">
+                </div>
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                </div>
+            </div>
+
+            <div id="project-desc-block" class="row">
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                    <img src="../../assets/art/3dwork/maletorso4.jpg" alt="male torso 3/4" class="img-thumbnail">
+                </div>
+                <div class="col-lg-6 col-md-6 mb-12 mb-md-0">
+                </div>
+            </div>
+        </div>
             <!--end of project desc-->
     </main>
     <!--end of main container-->
@@ -86,10 +157,10 @@
                 <div class="col-lg-4 col-md-4 mb-4 mb-md-0">
                     <h4>Follow Me</h4>
                     <a href="https://www.linkedin.com/in/vilinhnguyen27/"><img class="icons"
-                            src="./assets/linkedin-icon.png" alt="linkedin" /></a>
-                    <a href="https://twitter.com/vilinh27"><img class="icons" src="./assets/twitter-icon.png"
+                            src="../../assets/linkedin-icon.png" alt="linkedin" /></a>
+                    <a href="https://twitter.com/vilinh27"><img class="icons" src="../../assets/twitter-icon.png"
                             alt="twitter" /></a>
-                    <a href="https://www.instagram.com/linh_is_tibia/"><img class="icons" src="./assets/insta-icon.png"
+                    <a href="https://www.instagram.com/linh_is_tibia/"><img class="icons" src="../../assets/insta-icon.png"
                             alt="instagram" /></a>
                 </div>
             </div>
